2001-07-18  Marcus Brinkmann  <marcus@gnu.org>

	* rc: Do not excempt random-seed when cleaning up /var/run.  State
	data should be in /var/lib (FHS) or /var/state.
	* changelog: Update to current version.
	* debian/servers.boot: Add die $(serverboot).

2001-06-17  Marcus Brinkmann  <marcus@gnu.org>

	* changelog: Update to current version.

2001-06-15  Marcus Brinkmann  <marcus@gnu.org>

	* rc: Merge in recent changes from daemons/rc.sh.

2001-06-15  Marcus Brinkmann  <marcus@gnu.org>

	* rc: Be more selective with what to clean from /var/run.
	Patch by Moritz Schulte <moritz@chaosdorf.de>.

2001-04-29  Marcus Brinkmann  <marcus@gnu.org>

	* changelog: Update to reflect Debian upgrades.

2001-01-09  Marcus Brinkmann  <marcus@gnu.org>

	* changelog: Update to reflect Debian upgrade.

	* rules: Use --disable-profile wih configure instead no_prof=t
	with make.

2000-11-27  Marcus Brinkmann  <marcus@gnu.org>

	* changelog: Update to reflect Debian upgrade.
	* rc: New file.
	* rules: Install rc.
	* control: Add Build-Depends.

2000-07-04  Marcus Brinkmann  <marcus@gnu.org>

	* changelog: Update to reflect Debian uploads.
	* rules: Use install_script to install scripts.
	Don't check for shared libraries in scripts.

2000-01-30  Marcus Brinkmann  <marcus@gnu.org>

	* changelog: Update to reflect Debian uploads.

1999-10-09  Marcus Brinkmann  <marcus@gnu.org>

	* rules (BUILDARCH): Renamed to DEB_BUILD_GNU_TYPE.
	(HOSTARCH): Renamed to DEB_HOST_GNU_TYPE.
	(INFODIR): New variable.
	(STAMPS_TO_CLEAN): Add stamp-config.
	(configure): Depend on configure.in.
	(config, stamp-config): New targets.
	(stamp-build): Build info documentation.
	(clean): Do not clean up build directory, it will be removed.
	Clean documentation directory.
	(binary-arch): Remove etc/motd.
	Expand bash {,} syntax.
	Gzip serverboot.
	Install additional documentation formats.
	Rename libexec/runsystem to libexec/runsystem.gnu.
	Install postinst, prerm
	(.PHONY): Add config.
	