@@ -2,7 +2,7 @@ Source: hurd
 Section: base
 Priority: required
 Maintainer: GNU Hurd Maintainers <bug-hurd@gnu.org>
-Standards-Version: 2.5.0.0
+Standards-Version: 3.5.5.0
 Build-Depends: mig, texinfo, tetex-bin
 
 Package: hurd
